--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,30 @@ h1 {
 /* Body */
 
 
+    /* Carousel */
+    .carousel {
+        position: relative;
+    }
+
+    .carousel-item {
+        height: 250px;
+    }
+
+    .carousel-nav {
+        width: 100%;
+        padding: 20px 0px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        text-align: center;
+    }
+
+    .carousel-button {
+        width: 10px;
+        height: 10px;
+        display: inline-block;
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 50%;
+    }
+
 /* Footer */
