--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html {
     background-color: #121212;
     color: white;
+    margin: 0 75px;
 }
 
 /* Header */
@@ -9,32 +10,28 @@ h1 {
 }
 
 /* Body */
+h3 {
+    text-decoration: underline;
+}
+
+#main-info {
+    display: flex;
+    flex-direction: row;
+    border-style: solid;
+    justify-content: center;
+    align-items: center;
+}
+
+.column {
+    margin: 0 5px;
+}
+
+#column-1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 
-    /* Carousel */
-    .carousel {
-        position: relative;
-    }
-
-    .carousel-item {
-        height: 250px;
-    }
-
-    .carousel-nav {
-        width: 100%;
-        padding: 20px 0px;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        text-align: center;
-    }
-
-    .carousel-button {
-        width: 10px;
-        height: 10px;
-        display: inline-block;
-        background: rgba(255, 255, 255, 0.2);
-        border-radius: 50%;
-    }
 
 /* Footer */
